--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,10 @@ image: openjdk:8-jdk
 
 cache:
   paths:
-  - .gradle/wrapper
-  - .gradle/caches
+  - .gradle/*
 
 variables:
-  ANDROID_COMPILE_SDK: "29"
+  ANDROID_COMPILE_SDK: "30"
   ANDROID_BUILD_TOOLS: "29.0.3"
   ANDROID_SDK_TOOLS: "29.0.3"
 
@@ -37,20 +36,20 @@ stages:
   - build
   - deploy
 
-build:
+build-job:
   stage: build
   only:
   - branches
   script:
-  - ./gradlew build lint bundle -PrunLint=true --no-daemon --console=plain
+  - ./gradlew :trail-conditions-app:build :trail-conditions-app:lint :trail-conditions-app:bundle -PrunLint=true --no-daemon --console=plain
   artifacts:
     paths:
     - build/outputs/
 
-masterBuild:
+deploy-job:
   stage: deploy
   script:
-  - ./gradlew publishRelease --no-daemon --console=plain
+  - ./gradlew :trail-conditions-app:publishRelease --no-daemon --console=plain
   only:
   - master
 
