--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,9 +17,12 @@ before_script:
   - unzip -q android-sdk.zip -d cmdline-tools
   - mv cmdline-tools/cmdline-tools cmdline-tools/latest
 
+  - mkdir cmdline-tools/licenses
+  - printf "d56f5187479451eabf01fb78af6dfcb131a6481e\n24333f8a63b6825ea9c5514f83c2829b004d1fee" > cmdline-tools/licenses/android-sdk-license
+  - printf "84831b9409646a918e30573bab4c9c91346d8abd" > cmdline-tools/licenses/android-sdk-preview-license
+
   - cmdline-tools/latest/bin/sdkmanager --update > update.log
   - cmdline-tools/latest/bin/sdkmanager "platforms;android-${ANDROID_COMPILE_SDK}" "build-tools;${ANDROID_BUILD_TOOLS}" > installPlatform.log
-  - yes | cmdline-tools/latest/bin/sdkmanager --licenses > license.log || true
 
   - export ANDROID_HOME=$PWD/cmdline-tools
   - export ANDROID_SDK_ROOT=$ANDROID_HOME
